assets/css/app.css
/* This file is for your main application css. */

/* Phoenix flash messages */
.alert:empty { display: none; }

/* Custom page header */
.logo {
  text-decoration: none;
  font-weight: bold;
  font-size: 3em;
  color: #333;
}

.logo:hover {
  text-decoration: none;
  color: #000;
}

.nav {
  margin-top: 6px;
  max-height: 50px;
  overflow: hidden;
}

/* Featured section */
.featured {
  height: 360px;
  background-color: black;
  color: white;
}

.featured-img {
  margin-top: 50px;
  margin-right: 50px;
  float: left;
}

.featured-thumbnail {
  height: 260px;
}

.featured-data {
  margin-top: 50px;
  overflow: hidden;
}

/* Games section */
.game-item {
  border: 2px solid black;
  border-radius: 10px;
}

.media-object {
  height: 120px;
}

